# web_agent_parser

./: .gitignore  PARSERS.md  PIPELINE_CONFIG.md  README.md  pyproject.toml  requirements.txt  test.html
data/: README.md
scratch/: README.md
scripts/: README.md  browsesafe_infer.py  browsesafe_tag_infer.py  confusion_matrix.py  html_parser.py  rsync_push.sh  sec_ax_tree_wrapper.py
src/web_agent_parser/: __init__.py  accessibility_tree_parser.py  parsers.py  pipeline.py
src/web_agent_parser/configs/: pipeline.default.json  pipeline.sample.json
src/web_agent_parser/sec_ax_tree/: annotate_and_build.py  demo_runner.py  extract_html_only.py  extract_playwright.py  locator_simplify.py  types.py
tests/: README.md  custom_nano_agent.py  run_agisdk_harness.py  sample_tasks.json  test_obfuscation_parser.py  test_pipeline.py  test_translate_parser.py  test_translators.py
utils/: README.md
