[project]
name = "web-agent-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.34.2",
    "datasets>=2.21.0",
    "protobuf>=4.25.3",
    "rich>=13.9.4",
    "safetensors>=0.4.5",
    "sentencepiece>=0.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.4",
    "typer>=0.15.1",
    "wandb>=0.23.1",
]
